<resources>
    <string name="app_name">Stocks-io</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="preferences">preferences</string>
    <string name="user_logged_in">user_logged_in</string>
    <string name="user_email">user_email</string>
    <string name="token">token</string>

    <string name="price">$%1$s</string>

    <string name="buy_shares">Buy Shares</string>
    <string name="sell_shares">Sell Shares</string>

    <string name="how_many">How Many?</string>
    <string name="number">Number</string>
    <string name="go">GO</string>

    <string name="stock_search">Search for stocks</string>
    <string name="leaderboard">Leaderboard</string>
</resources>
