<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:padding="24dp">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:animateLayoutChanges="true"
                  android:gravity="center"
                  android:orientation="vertical">

        <TextView android:id="@+id/ticker_text"
                  style="@style/money_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>

        <com.jjoe64.graphview.GraphView android:id="@+id/performance_history"
                                        android:layout_width="wrap_content"
                                        android:layout_height="150dp"/>

        <RadioGroup android:layout_width="match_parent"
                    android:id="@+id/buy_sell_buttons"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

            <RadioButton android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/buy_shares"/>

            <RadioButton android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/sell_shares"/>

        </RadioGroup>

        <LinearLayout android:id="@+id/info_view"
                      android:layout_width="match_parent"
                      android:visibility="gone"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:orientation="vertical">

            <TextView style="@style/mega_text"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/how_many"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_view"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:hint="@string/number"/>

            </android.support.design.widget.TextInputLayout>


            <Button android:id="@+id/activate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_sned"
                    android:text="@string/go"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
